{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 577,
  "lineage": "aac2bff7-7700-2f79-9203-dae93dc2ac2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024fe1ee5489e6090",
            "association_id": "eipassoc-08b435822d2953e68",
            "domain": "vpc",
            "id": "eipalloc-024fe1ee5489e6090",
            "instance": "i-0913e477a8ffc7ba1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c188d8ee74aa5529",
            "private_dns": "ip-10-0-1-143.ec2.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-50-17-13-208.compute-1.amazonaws.com",
            "public_ip": "50.17.13.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Bastion-eip"
            },
            "tags_all": {
              "Name": "Bastion-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mjs-bastion",
            "aws_security_group.bastion_security_group",
            "aws_subnet.k8s_public_subnet_1",
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067ee450c6d0ea42f",
            "domain": "vpc",
            "id": "eipalloc-067ee450c6d0ea42f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-232-49-223.compute-1.amazonaws.com",
            "public_ip": "34.232.49.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nat-eip"
            },
            "tags_all": {
              "Name": "Nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mjs-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:000982191218:instance/i-0913e477a8ffc7ba1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0913e477a8ffc7ba1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform-test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c188d8ee74aa5529",
            "private_dns": "ip-10-0-1-143.ec2.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-3-239-164-188.compute-1.amazonaws.com",
            "public_ip": "3.239.164.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08534d170b73b74e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f56fcb3bb90016d",
            "tags": {
              "Name": "mjs-bastion-bastion"
            },
            "tags_all": {
              "Name": "mjs-bastion-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f6836045602b18f2"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security_group",
            "aws_subnet.k8s_public_subnet_1",
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mjs-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:internet-gateway/igw-04c0eef63ffb9629e",
            "id": "igw-04c0eef63ffb9629e",
            "owner_id": "000982191218",
            "tags": {
              "Name": "mjs_igw",
              "Owner": "mjs",
              "Service": "k8s_mjs"
            },
            "tags_all": {
              "Name": "mjs_igw",
              "Owner": "mjs",
              "Service": "k8s_mjs"
            },
            "vpc_id": "vpc-0062742e3717f96c5"
          },
          "dependencies": [
            "aws_vpc.mjs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mjs-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067ee450c6d0ea42f",
            "connectivity_type": "public",
            "id": "nat-022c63ff0bdff1fbc",
            "network_interface_id": "eni-036528605a2f5918e",
            "private_ip": "10.0.1.239",
            "public_ip": "34.232.49.223",
            "subnet_id": "subnet-05f56fcb3bb90016d"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.k8s_public_subnet_1",
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "mjs-pri-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03f424e723a6bb57e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-022c63ff0bdff1fbc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03f424e723a6bb57e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.mjs-nat",
            "aws_route_table.mjs-pri-rt",
            "aws_subnet.k8s_public_subnet_1",
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mjs-pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:route-table/rtb-03f424e723a6bb57e",
            "id": "rtb-03f424e723a6bb57e",
            "owner_id": "000982191218",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mjs_pri_rt",
              "Owner": "mjs",
              "Service": "k8s_mjs"
            },
            "tags_all": {
              "Name": "mjs_pri_rt",
              "Owner": "mjs",
              "Service": "k8s_mjs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0062742e3717f96c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mjs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mjs-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:route-table/rtb-0f90e3c20aff69bb7",
            "id": "rtb-0f90e3c20aff69bb7",
            "owner_id": "000982191218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c0eef63ffb9629e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mjs_public_rt",
              "Owner": "mjs",
              "Service": "k8s_mjs"
            },
            "tags_all": {
              "Name": "mjs_public_rt",
              "Owner": "mjs",
              "Service": "k8s_mjs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0062742e3717f96c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mjs-igw",
            "aws_vpc.mjs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_private_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5d7c1006df69529",
            "route_table_id": "rtb-03f424e723a6bb57e",
            "subnet_id": "subnet-0a1e64e625eb6bc7b"
          },
          "dependencies": [
            "aws_route_table.mjs-pri-rt",
            "aws_subnet.k8s_private_subnet_1",
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_private_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb5b776a1a442e43",
            "route_table_id": "rtb-03f424e723a6bb57e",
            "subnet_id": "subnet-05fd7d99d8de26346"
          },
          "dependencies": [
            "aws_route_table.mjs-pri-rt",
            "aws_subnet.k8s_private_subnet_2",
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_public_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04498f789ddd9f0b5",
            "route_table_id": "rtb-0f90e3c20aff69bb7",
            "subnet_id": "subnet-05f56fcb3bb90016d"
          },
          "dependencies": [
            "aws_internet_gateway.mjs-igw",
            "aws_route_table.mjs-public-rt",
            "aws_subnet.k8s_public_subnet_1",
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_public_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079067d5e5f13e798",
            "route_table_id": "rtb-0f90e3c20aff69bb7",
            "subnet_id": "subnet-0e546331a74f823ec"
          },
          "dependencies": [
            "aws_internet_gateway.mjs-igw",
            "aws_route_table.mjs-public-rt",
            "aws_subnet.k8s_public_subnet_2",
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:security-group/sg-0f6836045602b18f2",
            "description": "Security Group for mjs-bastion Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6836045602b18f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mjs-bastion-bastion-sg",
            "name_prefix": "",
            "owner_id": "000982191218",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0062742e3717f96c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mjs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mjs-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:security-group/sg-037aa4c85bb11266a",
            "description": "Test_mjs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037aa4c85bb11266a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all Access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mjs-securitygroup",
            "name_prefix": "",
            "owner_id": "000982191218",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_Access"
            },
            "tags_all": {
              "Name": "allow_Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0062742e3717f96c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mjs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:subnet/subnet-0a1e64e625eb6bc7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1e64e625eb6bc7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000982191218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mjs-private-subnet-1",
              "Owner": "mjs",
              "Service": "k8s_example",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mjs-private-subnet-1",
              "Owner": "mjs",
              "Service": "k8s_example",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0062742e3717f96c5"
          },
          "dependencies": [
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:subnet/subnet-05fd7d99d8de26346",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fd7d99d8de26346",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000982191218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mjs-private-subnet-2",
              "Owner": "mjs",
              "Service": "k8s_example",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mjs-private-subnet-2",
              "Owner": "mjs",
              "Service": "k8s_example",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0062742e3717f96c5"
          },
          "dependencies": [
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:subnet/subnet-05f56fcb3bb90016d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f56fcb3bb90016d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000982191218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mjs-publicsubnet-1",
              "Owner": "mjs",
              "Service": "k8s_example",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mjs-publicsubnet-1",
              "Owner": "mjs",
              "Service": "k8s_example",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0062742e3717f96c5"
          },
          "dependencies": [
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:subnet/subnet-0e546331a74f823ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e546331a74f823ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000982191218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mjs-public-subnet-2",
              "Owner": "mjs",
              "Service": "k8s_example",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mjs-public-subnet-2",
              "Owner": "mjs",
              "Service": "k8s_example",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0062742e3717f96c5"
          },
          "dependencies": [
            "aws_vpc.mjs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mjs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000982191218:vpc/vpc-0062742e3717f96c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044a14c91e545f1f7",
            "default_route_table_id": "rtb-0cf47ac0b1066e064",
            "default_security_group_id": "sg-087b41cfff238d811",
            "dhcp_options_id": "dopt-090efa73",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0062742e3717f96c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf47ac0b1066e064",
            "owner_id": "000982191218",
            "tags": {
              "Name": "mjs_vpc",
              "Owner": "mjs",
              "Service": "k8s_mjs",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "mjs_vpc",
              "Owner": "mjs",
              "Service": "k8s_mjs",
              "kubernetes.io/cluster/mjs-terraform-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}